--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -174,19 +174,16 @@ p {
   font-family: Inter;
   font-size: 1.25vw;
   font-weight: 600;
-  
 }
 .third-col-details .third-col-section > p {
   color: var(--white);
   font-size: 1.875vw;
   font-weight: 700;
-  
 }
 .third-col-details p {
   color: var(--white);
   font-size: 1.25vw;
   font-weight: 600;
-  
 }
 .third-col-holder {
   max-width: 55.195vw;
@@ -548,14 +545,13 @@ p {
   justify-content: center;
   display: flex;
 }
-#seventh-listveiw >li {
+#seventh-listveiw > li {
   padding: 2.188vw 6.25vw;
   border-radius: 0.313vw;
   background: #fff;
   width: 20.977vw;
   height: 11.445vw;
-    background-image: url("https://images.unsplash.com/photo-1683009680116-b5c04463551d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
-
+  background-image: url("https://images.unsplash.com/photo-1683009680116-b5c04463551d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
 }
 .secenth-center > p {
   margin-top: 0.625vw;
@@ -673,7 +669,7 @@ p {
     flex-direction: column;
     gap: 0;
   }
-  .home-rect{
+  .home-rect {
     display: none;
   }
   .col-details {
@@ -687,10 +683,10 @@ p {
   .col-details > p:nth-child(2) {
     font-size: 5.188vw;
   }
- 
+
   .col-details > p:nth-child(3) {
     text-align: justify;
-    font-size: 2.938vw;
+    font-size: 3.938vw;
   }
   .product-read-more {
     text-decoration: none;
@@ -699,218 +695,221 @@ p {
     margin-top: 2.875vw;
   }
   .third-col-wrap {
-    height:77.875vw;
-}
-.third-col-details {
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-.third-col-wrap{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.third-col-holder {
-  position: relative;
-  top: 2.695vw;
-}
-.third-col-section > h1 {
-  font-size: 4.25vw;
-  margin-bottom: 10px;
-}
-.third-col-details .third-col-section > p {
-  font-size: 2.875vw;
-}
-.third-col-details p {
-  font-size: 2.25vw;
-}
-.fouth-col-details > p {
-  font-size: 5.125vw;
-}
-.fouth-col-details > h1 {
-  font-size: 4.25vw;
-}.service-container > li {
-  flex-direction: column-reverse;
-  align-items: center;
-}
-.list-container-holder {
-  width: 100%;
-}
-.list-service-holder {
-  width: 72.539vw;
-  height: 28.156vw;
-}
-.service-container .services-content-container > h1 {
-  margin-top: 20px;
-  font-size: 3.25vw;
-  color: #feba16;
-}
-.services-content-container {
-  width: 100%;
-  height: inherit;
-}
-.service-container .services-content-container > p {
-  width: 100%;
-  margin-top: 0.391vw;
-  font-size: 4.188vw;
-}
-.excerpt-container {
-  width: 100%;
-}
-.excerpt-container > p {
-  font-size: 1.938vw;
-}
-.services-content-container > a {
-  width: 19.305vw;
-  height: 4vw;
-  margin-top: 2.875vw;
-  display: flex;
-  align-items: center;
-  font-size:2vw ;
-}
-.fifth-col-wrap {
-  height: 74.844vw;
-  justify-content: start;
-  flex-direction: column-reverse;
-  gap: 10px;
-}
-.fifth-details-wrap {
-  width: 100%;
-  position: relative;
-}
-.fifth-col-container {
-  position: relative;
-}
-.fifth-details-wrap > h1 {
-  font-size: 3.25vw;
-}
-.fifth-details-wrap > p:nth-child(3) {
-  margin-top: 2.367vw;
-  font-size: 2.938vw;
-}
-.fifth-details-wrap > button {
-  margin-top: 4.367vw;
-  padding: 1.625vw 3.25vw;
-  font-size: 2.25vw;
-}
-.fifth-col-container {
-  width: 75.031vw;
-  margin-top: 2vw;
-}
-.six-col-wrap #six-col-tittle {
-  width: 63.492vw;
-  font-size: 5.125vw;
-}
-.six-col-container {
-  justify-content: space-between;
-  margin-top: 2.5vw;
-  flex-direction: column-reverse;
-}
-.six-container-holder {
-  width: 75.969vw;
-  height: 32.664vw;
-  border-radius: 0.313vw;
-}
-.six-right-corner section > h1 {
-  font-size: 3.25vw;
-}
-
-.six-right-corner section > p {
-  font-size: 4.188vw;
-}
-.six-right-corner > section {
+    height: 77.875vw;
+  }
+  .third-col-details {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .third-col-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .third-col-holder {
+    position: relative;
+    top: 2.695vw;
+  }
+  .third-col-section > h1 {
+    font-size: 4.25vw;
+    margin-bottom: 10px;
+  }
+  .third-col-details .third-col-section > p {
+    font-size: 2.875vw;
+  }
+  .third-col-details p {
+    font-size: 2.25vw;
+  }
+  .fouth-col-details > p {
+    font-size: 5.125vw;
+  }
+  .fouth-col-details > h1 {
+    font-size: 4.25vw;
+  }
+  .service-container > li {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .list-container-holder {
     width: 100%;
-}
-.six-right-corner section > ul > li {
-  font-size: 2.938vw;
-  margin-top: 2vw;
-}
-.six-right-corner section > a {
-  padding: 1.625vw 1.25vw 1.625vw 1.25vw;
-  font-size: 2.25vw;
-}
-.corner-content {
-  width: 100%;
-}
-.corner-content > p {
-  font-size: 2.738vw;
-}
-.corner-content > h1 {
-  font-size: 2.25vw;
-}
-.inside-padding > img {
-  width: 9.805vw;
-  height: 10.805vw;
-}
-.six-left-corner > ul{
-  margin-top: 3vw;
-}
-.seventh-section {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-}
-.seventh-section > h1 {
-  width: 100%;
-  font-size: 4.925vw;
-}
-.seventh-section > p {
-  margin-top: 2.567vw;
-  font-size: 2.25vw;
-  text-align: center;
-  width: 100%;
-}
-#seventh-listveiw {
-  flex-direction: column;}
+  }
+  .list-service-holder {
+    width: 72.539vw;
+    height: 28.156vw;
+  }
+  .service-container .services-content-container > h1 {
+    margin-top: 20px;
+    font-size: 3.25vw;
+    color: #feba16;
+  }
+  .services-content-container {
+    width: 100%;
+    height: inherit;
+  }
+  .service-container .services-content-container > p {
+    width: 100%;
+    margin-top: 0.391vw;
+    font-size: 4.188vw;
+  }
+  .excerpt-container {
+    width: 100%;
+  }
+  .excerpt-container > p {
+    font-size: 1.938vw;
+  }
+  .services-content-container > a {
+    width: 19.305vw;
+    height: 4vw;
+    margin-top: 2.875vw;
+    display: flex;
+    align-items: center;
+    font-size: 2vw;
+  }
+  .fifth-col-wrap {
+    height: 74.844vw;
+    justify-content: start;
+    flex-direction: column-reverse;
+    gap: 10px;
+  }
+  .fifth-details-wrap {
+    width: 100%;
+    position: relative;
+  }
+  .fifth-col-container {
+    position: relative;
+  }
+  .fifth-details-wrap > h1 {
+    font-size: 3.25vw;
+  }
+  .fifth-details-wrap > p:nth-child(3) {
+    margin-top: 2.367vw;
+    font-size: 2.938vw;
+  }
+  .fifth-details-wrap > button {
+    margin-top: 4.367vw;
+    padding: 1.625vw 3.25vw;
+    font-size: 2.25vw;
+  }
+  .fifth-col-container {
+    width: 75.031vw;
+    margin-top: 2vw;
+  }
+  .six-col-wrap #six-col-tittle {
+    width: 63.492vw;
+    font-size: 5.125vw;
+  }
+  .six-col-container {
+    justify-content: space-between;
+    margin-top: 2.5vw;
+    flex-direction: column-reverse;
+  }
+  .six-container-holder {
+    width: 75.969vw;
+    height: 32.664vw;
+    border-radius: 0.313vw;
+  }
+  .six-right-corner section > h1 {
+    font-size: 3.25vw;
+  }
+
+  .six-right-corner section > p {
+    font-size: 4.188vw;
+  }
+  .six-right-corner > section {
+    width: 100%;
+  }
+  .six-right-corner section > ul > li {
+    font-size: 2.938vw;
+    margin-top: 2vw;
+  }
+  .six-right-corner section > a {
+    padding: 1.625vw 1.25vw 1.625vw 1.25vw;
+    font-size: 2.25vw;
+  }
+  .corner-content {
+    width: 100%;
+  }
+  .corner-content > p {
+    font-size: 2.738vw;
+  }
+  .corner-content > h1 {
+    font-size: 2.25vw;
+  }
+  .inside-padding > img {
+    width: 9.805vw;
+    height: 10.805vw;
+  }
+  .six-left-corner > ul {
+    margin-top: 3vw;
+  }
+  .seventh-section {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .seventh-section > h1 {
+    width: 100%;
+    font-size: 4.925vw;
+  }
+  .seventh-section > p {
+    margin-top: 2.567vw;
+    font-size: 2.25vw;
+    text-align: center;
+    width: 100%;
+  }
+  #seventh-listveiw {
+    flex-direction: column;
+  }
 
   #seventh-listveiw > li {
     width: 85%;
     height: 27.445vw;
-}
-.eight-col-wrap {
-  flex-direction: column;
-}
-#eight-list-view > li > section > h1 {
-  font-size: 2.25vw;
-}
-#eight-list-view > li > section > p {
-  font-size: 2.338vw;
-  width: 100%;
-}
-#eight-list-view > li > img {
-  width: 11.805vw;
-  height: 12.805vw;
-}
-.nnth-col-wrap > section h1 {
-  font-size: 4.25vw;
-}
-#nnth-listview {
-  flex-direction: column;
-  align-items: center;
-}
-.nnth-col-wrap > section p:nth-child(2) {
-  font-size: 6.125vw;
-}
-.nnth-col-wrap > section p:nth-child(3) {
-  font-size: 3.25vw;
-}
-.circularAvart img {
-  width: 15.805vw;
-  height: 19.805vw;
-}
-#nnth-listview > li {
-  width: 100%;
-}
-.nnth-center > p {
-  font-size: 2.938vw;
-  width: 50vw;
-}
+  }
+  .eight-col-wrap {
+    flex-direction: column;
+  }
+  #eight-list-view > li > section > h1 {
+    font-size: 2.25vw;
+  }
+  #eight-list-view > li > section > p {
+    font-size: 2.338vw;
+    width: 100%;
+  }
+  #eight-list-view > li > img {
+    width: 11.805vw;
+    height: 12.805vw;
+  }
+  .nnth-col-wrap > section h1 {
+    font-size: 4.25vw;
+  }
+  #nnth-listview {
+    flex-direction: column;
+    align-items: center;
+  }
+  .nnth-col-wrap > section p:nth-child(2) {
+    font-size: 6.125vw;
+  }
+  .nnth-col-wrap > section p:nth-child(3) {
+    font-size: 3.25vw;
+  }
+  .circularAvart img {
+    width: 15.805vw;
+    height: 19.805vw;
+  }
+  #nnth-listview > li {
+    width: 100%;
+  }
+  .nnth-center > p {
+    font-size: 2.938vw;
+    width: 50vw;
+  }
 }
 @media (max-width: 488px) {
   .second-col-wrap {
+    padding: 120px 10px;
     justify-content: center;
     flex-direction: column;
     gap: 0;
@@ -923,10 +922,13 @@ p {
     width: 73.797vw;
     height: inherit;
   }
-  .col-details > p:nth-child(2) {
-    font-size: 5.188vw;
+  .col-details > h1 {
+    font-size: 7.25vw;
   }
- 
+  .col-details > p:nth-child(2) {
+    font-size: 7.188vw;
+  }
+
   .col-details > p:nth-child(3) {
     text-align: justify;
     font-size: 2.938vw;
@@ -936,192 +938,215 @@ p {
     width: 35.305vw;
     font-size: 3.938vw;
     margin-top: 4.875vw;
-
   }
   .third-col-wrap {
-    height:77.875vw;
+    height: 77.875vw;
+  }
+  .third-col-details {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .third-col-wrap {
+    height: 131.875vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .third-col-holder {
+    position: relative;
+    top: 2.695vw;
+  }
+  .third-col-section > h1 {
+    font-size: 8.25vw;
+    margin-bottom: 10px;
+
+    text-align: initial;
+  }
+  .third-col-details .third-col-section > p {
+    font-size: 3.875vw;
+  }
+  .third-col-details p {
+    font-size: 4.25vw;
+    text-align: initial;
+  }
+  .fouth-col-details > p {
+    font-size: 5.125vw;
+  }
+  .fouth-col-details > h1 {
+    font-size: 4.25vw;
+  }
+  .service-container > li {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .list-container-holder {
+    width: 100%;
+  }
+  .list-service-holder {
+    width: 72.539vw;
+    height: 28.156vw;
+  }
+  .service-container .services-content-container > h1 {
+    margin-top: 20px;
+    font-size: 3.25vw;
+    color: #feba16;
+  }
+  .services-content-container {
+    width: 100%;
+    height: inherit;
+  }
+  .service-container .services-content-container > p {
+    width: 100%;
+    margin-top: 0.391vw;
+    font-size: 4.188vw;
+  }
+  .excerpt-container {
+    width: 100%;
+  }
+  .excerpt-container > p {
+    font-size: 1.938vw;
+  }
+  .services-content-container > a {
+    width: 19.305vw;
+    height: 4vw;
+    margin-top: 2.875vw;
+    display: flex;
+    align-items: center;
+    font-size: 2vw;
+  }
+  .fifth-col-wrap {
+    height: 142.844vw;
+    justify-content: start;
+    flex-direction: column-reverse;
+    gap: 10px;
+  }
+  .fifth-details-wrap {
+    width: 100%;
+    position: relative;
+  }
+  .fifth-col-container {
+    position: relative;
+  }
+  .fifth-details-wrap > h1 {
+    font-size: 8.25vw;
+  }
+  .fifth-details-wrap > p:nth-child(2) {
+    margin-top: 1.625vw;
+    font-size: 4.125vw;
+  }
+  .fifth-details-wrap > p:nth-child(3) {
+    margin-top: 4.367vw;
+    font-size: 3.938vw;
+  }
+  .fifth-details-wrap > button {
+    margin-top: 4.367vw;
+    padding: 2.625vw 11.25vw;
+    font-size: 3.25vw;
+  }
+  .fifth-col-container {
+    width: 75.031vw;
+    margin-top: 2vw;
+  }
+  .six-col-wrap #six-col-tittle {
+    width: 86.492vw;
+    font-size: 8.125vw;
 }
-.third-col-details {
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-.third-col-wrap{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.third-col-holder {
-  position: relative;
-  top: 2.695vw;
-}
-.third-col-section > h1 {
-  font-size: 4.25vw;
-  margin-bottom: 10px;
-}
-.third-col-details .third-col-section > p {
-  font-size: 2.875vw;
-}
-.third-col-details p {
-  font-size: 2.25vw;
-}
-.fouth-col-details > p {
-  font-size: 5.125vw;
-}
-.fouth-col-details > h1 {
-  font-size: 4.25vw;
-}.service-container > li {
-  flex-direction: column-reverse;
-  align-items: center;
-}
-.list-container-holder {
-  width: 100%;
-}
-.list-service-holder {
-  width: 72.539vw;
-  height: 28.156vw;
-}
-.service-container .services-content-container > h1 {
-  margin-top: 20px;
-  font-size: 3.25vw;
-  color: #feba16;
-}
-.services-content-container {
-  width: 100%;
-  height: inherit;
-}
-.service-container .services-content-container > p {
-  width: 100%;
-  margin-top: 0.391vw;
-  font-size: 4.188vw;
-}
-.excerpt-container {
-  width: 100%;
-}
-.excerpt-container > p {
-  font-size: 1.938vw;
-}
-.services-content-container > a {
-  width: 19.305vw;
-  height: 4vw;
-  margin-top: 2.875vw;
-  display: flex;
-  align-items: center;
-  font-size:2vw ;
-}
-.fifth-col-wrap {
-  height: 74.844vw;
-  justify-content: start;
-  flex-direction: column-reverse;
-  gap: 10px;
-}
-.fifth-details-wrap {
-  width: 100%;
-  position: relative;
-}
-.fifth-col-container {
-  position: relative;
-}
-.fifth-details-wrap > h1 {
-  font-size: 3.25vw;
-}
-.fifth-details-wrap > p:nth-child(3) {
-  margin-top: 2.367vw;
-  font-size: 2.938vw;
-}
-.fifth-details-wrap > button {
-  margin-top: 4.367vw;
-  padding: 1.625vw 3.25vw;
-  font-size: 2.25vw;
-}
-.fifth-col-container {
-  width: 75.031vw;
-  margin-top: 2vw;
-}
-.six-col-wrap #six-col-tittle {
-  width: 63.492vw;
-  font-size: 5.125vw;
-}
-.six-col-container {
-  justify-content: space-between;
-  margin-top: 2.5vw;
-  flex-direction: column-reverse;
-}
-.six-container-holder {
-  width: 75.969vw;
-  height: 32.664vw;
-  border-radius: 0.313vw;
-}
-.six-right-corner section > h1 {
-  font-size: 3.25vw;
+  }
+  .six-col-container {
+    justify-content: space-between;
+    margin-top: 2.5vw;
+    flex-direction: column-reverse;
+  }
+  .six-container-holder {
+    width: 100%;
+    height: 55.664vw;
+    border-radius: 0.313vw;
+  }
+  .six-right-corner section > h1 {
+    font-size: 5.25vw;
+  }
+
+  .six-right-corner section > p {
+    font-size: 6.188vw;
+  }
+  .six-right-corner > section {
+    width: 100%;
+  }
+  .six-right-corner section > ul > li {
+    font-size: 4.938vw;
+    margin-top: 6vw;
+  }
+  .six-left-corner > ul {
+    margin-top: 5vw;
+  }
+  .six-left-corner > ul > li {
+    height: 28vw;
+    margin-top: 2.25vw;
 }
 
-.six-right-corner section > p {
-  font-size: 4.188vw;
-}
-.six-right-corner > section {
+  .six-right-corner section > a {
+    margin-top:6vw ;
+    padding: 2.625vw 1.25vw;
+    font-size: 4.25vw;
+
+  }
+  .corner-content {
     width: 100%;
-}
-.six-right-corner section > ul > li {
-  font-size: 2.938vw;
-  margin-top: 2vw;
-}
-.six-right-corner section > a {
-  padding: 1.625vw 1.25vw 1.625vw 1.25vw;
-  font-size: 2.25vw;
-}
-.corner-content {
-  width: 100%;
-}
-.corner-content > p {
-  font-size: 2.738vw;
-}
-.corner-content > h1 {
-  font-size: 2.25vw;
-}
-.inside-padding > img {
-  width: 9.805vw;
-  height: 10.805vw;
-}
-.six-left-corner > ul{
-  margin-top: 3vw;
-}
-.seventh-section {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-}
-.seventh-section > h1 {
-  width: 100%;
-  font-size: 4.925vw;
-}
-.seventh-section > p {
-  margin-top: 2.567vw;
-  font-size: 2.25vw;
-  text-align: center;
-  width: 100%;
-}
-#seventh-listveiw {
-  flex-direction: column;}
+  }
+  .corner-content > p {
+    font-size: 2.738vw;
+  }
+  .corner-content > h1 {
+    font-size: 2.25vw;
+  }
+  .inside-padding > img {
+    width: 9.805vw;
+    height: 10.805vw;
+  }
+  .six-left-corner > ul {
+    margin-top: 3vw;
+  }
+  .seventh-section {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .seventh-section > h1 {
+    width: 100%;
+    font-size: 4.925vw;
+  }
+  .seventh-section > p {
+    margin-top: 2.567vw;
+    font-size: 2.25vw;
+    text-align: center;
+    width: 100%;
+  }
+  #seventh-listveiw {
+    flex-direction: column;
+  }
 
   #seventh-listveiw > li {
     width: 85%;
     height: 27.445vw;
-}
-.eight-col-wrap {
-  flex-direction: column;
-}
-#eight-list-view > li > section > h1 {
-  font-size: 2.25vw;
-}
-#eight-list-view > li > section > p {
-  font-size: 2.338vw;
-  width: 100%;
-}
-#eight-list-view > li > img {
-  width: 11.805vw;
-  height: 12.805vw;
-}
+  }
+  .eight-col-wrap {
+    flex-direction: column;
+  }
+  #eight-list-view > li > section > h1 {
+    font-size: 2.25vw;
+  }
+  #eight-list-view > li > section > p {
+    font-size: 2.338vw;
+    width: 100%;
+  }
+  #eight-list-view > li > img {
+    width: 11.805vw;
+    height: 12.805vw;
+  }
+  .main-padding {
+    padding: 3.75vw 3.719vw 3.75vw 3.719vw;
+  }
 }
