--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -74,7 +74,7 @@
   height: 32.984vw;
   background: #12222f;
 }
-.about-us-col section > button {
+.about-us-col section > a {
   margin-top: 1.875vw;
   display: flex;
   justify-content: center;
@@ -121,7 +121,7 @@
   object-fit: cover;
 }
 
-.about-intro > h1{
+.about-intro > h1 {
   text-align: center;
   color: var(--Omni-Dark);
   margin-top: 16px;
@@ -129,30 +129,29 @@
   font-size: 3.808vw;
   font-weight: 700;
 }
-.about-team > ul > li > section > img{
+.about-team > ul > li > section > img {
   width: 22vw;
   height: 25vw;
   object-fit: cover;
   border-radius: 10px;
-
 }
 .about-team > ul {
-  margin-top:5vw;
+  margin-top: 5vw;
   list-style: none;
   text-decoration: none;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
- gap: 5vw;
+  gap: 5vw;
 }
-.about-team > ul > li > section>h1 {
+.about-team > ul > li > section > h1 {
   color: var(--Omni-Dark);
   margin-top: 16px;
   font-family: var(--Inter);
   font-size: 1.808vw;
   font-weight: 700;
 }
-.about-team > ul > li > section{
+.about-team > ul > li > section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -162,7 +161,7 @@
   text-align: justify;
   margin-top: 0.875vw;
   font-family: var(--JakartaSans);
-  font-size:0.875vw;
+  font-size: 0.875vw;
   font-weight: 500;
 }
 .about-team > ul > li > section > p:nth-child(4) {
@@ -174,12 +173,11 @@
   font-weight: 500;
   text-align: center;
 }
-#team-socials > a{
+#team-socials > a {
   border: 1 solid var(--main-color);
   font-size: 2vw;
   color: var(--main-color);
-  margin:2vw 0.923vw;
-
+  margin: 2vw 0.923vw;
 }
 .second-left-corner > ul {
   list-style: none;
@@ -267,56 +265,62 @@
   font-size: 3.25vw;
   text-align: center;
   font-weight: 600;
-  
 
   margin-bottom: 1.563vw;
 }
 @media (max-width: 788px) {
   .about-us-col {
     flex-direction: column-reverse;
-}
-.col-rectanlge > img {
-  width: 100%;
-}
-.about-us-col > section {
-  margin-top: 3vw;
-  width: 100%;
-}
-.about-us-col > section > h1 {
-  font-size: 2.25vw;
-}
-.about-us-col > section > p:nth-child(2) {
-  font-size: 4.188vw;
-}
-.about-us-col > section > p:nth-child(3) {
-  font-size: 2.238vw;
-}
-.about-us-col section > button {
-  padding: 2.625vw 3.25vw 2.625vw 3.25vw;
-  font-size: 2.45vw;
-}
-.about-team > ul {
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.about-team > ul > li > section > img {
-  width: 43vw;
-  height: 50vw;
-}
-.about-team > ul > li > section>h1 {
-  font-size: 5.808vw;
-}
-.about-team > ul > li > section > p {
-  font-size: 4.875vw;
-}
-.about-team > ul > li > section > p:nth-child(4) {
-  font-size: 2.108vw;
-}
-#team-socials > a {
-  border: 1 solid var(--main-color);
-  font-size: 3vw;
-  color: var(--main-color);
-  margin: 2vw 0.923vw;
-}
+  }
+  .col-rectanlge > img {
+    width: 100%;
+    height: 62.943vw;
+  }
+  .about-us-col > section {
+    margin-top: 3vw;
+    width: 100%;
+  }
+  .about-us-col > section > h1 {
+    font-size: 2.25vw;
+  }
+  .about-us-col > section > p:nth-child(2) {
+    font-size: 4.188vw;
+  }
+  .about-us-col > section > p:nth-child(3) {
+    font-size: 2.238vw;
+  }
+  .about-us-col section > a {
+    margin-top: 5vw;
+    padding: 4.625vw 8.25vw;
+    font-size: 4.45vw;
+    border-radius: 1vw;
+  }
+  .about-team > ul {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .about-team > ul > li > section > img {
+    width: 83vw;
+    height: 91vw;
+  }
+  .about-intro > h1 {
+    margin-top: 43px;
+    font-size: 8.808vw;
+  }
+  .about-team > ul > li > section > h1 {
+    font-size: 5.808vw;
+  }
+  .about-team > ul > li > section > p {
+    font-size: 4.875vw;
+  }
+  .about-team > ul > li > section > p:nth-child(4) {
+    font-size: 2.108vw;
+  }
+  #team-socials > a {
+    border: 1 solid var(--main-color);
+    font-size: 3vw;
+    color: var(--main-color);
+    margin: 2vw 0.923vw;
+  }
 }
