--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -39,22 +39,7 @@ body {
 .main-padding {
   padding: 3.75vw 11.719vw 3.75vw 11.719vw;
 }
-.menurwap {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  max-width: 520px;
-  background-color: #12222f;
-  z-index: 3;
-  transition: 0.5s ease-in;
-}
-.menurwap.menuopen {
-  width: 60%;
-}
-.menurwap.menuopen .mainwrap {
-  margin: 7vw 5vw;
-}
+
 .second-col-wrap {
   display: flex;
   align-items: center;
@@ -62,7 +47,7 @@ body {
   gap: 19.063vw;
 }
 .col-details {
-  width: 31.797vw;
+  width: 100%;
   height: 29.727vw;
 }
 .product-read-more {
@@ -175,11 +160,14 @@ p {
   object-fit: cover;
   border-radius: 0.391vw;
 } */
-
+.third-col-wrap {
+  display: flex;
+  align-items: center;
+}
 .third-col-details {
   display: flex;
-  gap: 8.633vw;
-  justify-content: space-between;
+  align-items: start;
+  flex-direction: column;
 }
 .third-col-section h1,
 p {
@@ -202,19 +190,17 @@ p {
   font-weight: 600;
 }
 .third-col-holder {
-  max-width: 55.195vw;
-  width: 95%;
-  height: 34.18vw;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 17.695vw;
-  margin: auto;
+  width: 100%;
+  height: inherit;
   border-radius: 1.25vw;
   background: #423a41;
 }
+.third-col-holder > img {
+  width: inherit;
+}
 .fouth-col-wrap {
   margin-top: 5vw;
+  background-color: aliceblue;
 }
 .fouth-col-details > h1 {
   color: var(--Muted-Text);
@@ -577,7 +563,7 @@ p {
   font-weight: 600;
 }
 #seventh-listveiw > li .secenth-center {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -680,20 +666,36 @@ p {
   width: 20.117vw;
 }
 @media (max-width: 788px) {
-  .second-col-wrap {
-    justify-content: center;
-    flex-direction: column;
-    gap: 0;
-  }
   .home-rect {
     display: none;
   }
+  .menurwap {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    max-width: 520px;
+    background-color: #12222f;
+    z-index: 3;
+    transition: 0.5s ease-in;
+  }
+  .menurwap.menuopen {
+    width: 100%;
+  }
+  .menurwap.menuopen .mainwrap {
+    margin: 7vw 5vw;
+  }
+  .second-col-wrap {
+    justify-content: center;
+    flex-direction: column-reverse;
+    gap: 0;
+  }
   .col-details {
-    text-align: center;
+    text-align: start;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 73.797vw;
+    align-items: start;
+    width: 100%;
     height: inherit;
   }
   .col-details > p:nth-child(2) {
@@ -703,6 +705,15 @@ p {
   .col-details > p:nth-child(3) {
     text-align: justify;
     font-size: 3.938vw;
+  }
+  .col-rectanlge {
+    width: 100%;
+  }
+  .col-rectanlge > img {
+    margin: 5vw 0;
+    display: block;
+    width: 14vw;
+    height: 10vw;
   }
   .product-read-more {
     text-decoration: none;
@@ -750,10 +761,11 @@ p {
   }
   .list-container-holder {
     width: 100%;
+    height: 49.469vw;
   }
   .list-service-holder {
-    width: 72.539vw;
-    height: 28.156vw;
+    width: 100%;
+    height: 100%;
   }
   .service-container .services-content-container > h1 {
     margin-top: 20px;
@@ -924,18 +936,12 @@ p {
   }
 }
 @media (max-width: 488px) {
-  .second-col-wrap {
-    padding: 120px 10px;
-    justify-content: center;
-    flex-direction: column;
-    gap: 0;
-  }
   .col-details {
-    text-align: center;
+    text-align: start;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 73.797vw;
+    align-items: start;
+    width: 100%;
     height: inherit;
   }
   .col-details > h1 {
@@ -962,6 +968,7 @@ p {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    width: 89%;
   }
   .third-col-wrap {
     height: 131.875vw;
@@ -1001,12 +1008,15 @@ p {
     width: 100%;
   }
   .list-service-holder {
-    width: 72.539vw;
-    height: 28.156vw;
+    width: 100%;
+    height: 100%;
+  }
+  .list-container-holder {
+    height: 51.469vw;
   }
   .service-container .services-content-container > h1 {
     margin-top: 20px;
-    font-size: 3.25vw;
+    font-size: 5.25vw;
     color: #feba16;
   }
   .services-content-container {
@@ -1016,21 +1026,21 @@ p {
   .service-container .services-content-container > p {
     width: 100%;
     margin-top: 0.391vw;
-    font-size: 4.188vw;
+    font-size: 8.188vw;
   }
   .excerpt-container {
     width: 100%;
   }
   .excerpt-container > p {
-    font-size: 1.938vw;
+    font-size: 3.938vw;
   }
   .services-content-container > a {
-    width: 19.305vw;
-    height: 4vw;
+    width: 33.305vw;
+    height: 8vw;
     margin-top: 2.875vw;
     display: flex;
     align-items: center;
-    font-size: 2vw;
+    font-size: 4vw;
   }
   .fifth-col-wrap {
     height: 142.844vw;
@@ -1161,9 +1171,7 @@ p {
     width: 11.805vw;
     height: 12.805vw;
   }
-  .main-padding {
-    padding: 3.75vw 3.719vw 3.75vw 3.719vw;
-  }
+
   #bgwhirl {
     display: none;
   }
