--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -138,6 +138,9 @@ a {
   display: none;
 }
 @media (max-width: 788px) {
+  #header {
+    height: 175.281vw;
+  }
   #header-col {
     height: 18.5vw;
   }
@@ -155,9 +158,7 @@ a {
   .nav-wrap {
     display: none;
   }
-  #header {
-    height: 106.281vw;
-  }
+
   .right-content {
     display: none;
   }
@@ -168,24 +169,25 @@ a {
     justify-content: center;
   }
   .left-content {
-    text-align: center;
+    text-align: start;
     width: 72.461vw;
     height: inherit;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
   }
 
   .left-content > h1 {
-    font-size: 6.825vw;
+    font-size: 9.825vw;
   }
   .left-content > p {
-    font-size: 3.938vw;
+    font-size: 5.938vw;
+    margin: 5vw 0;
   }
   .left-content > a {
     margin-top: 2.781vw;
-    font-size: 1.938vw;
-    padding: 2.625vw 6.45vw;
+    font-size: 2.938vw;
+    padding: 4.625vw 9.45vw;
     border-radius: 1.391vw;
   }
   .col-details > h1 {
@@ -221,13 +223,11 @@ a {
   }
 }
 @media (max-width: 488px) {
-  #header {
-    height: 128.281vw;
-  }
   .left-content > h1 {
-    font-size: 7.825vw;
+    font-size: 9.825vw;
   }
   .left-content > p {
+    margin: 5vw 0;
     font-size: 5.938vw;
   }
   .left-content > a {
@@ -235,5 +235,12 @@ a {
     font-size: 3.938vw;
     padding: 3.625vw 11.45vw;
     border-radius: 1.391vw;
+  }
+  .left-content {
+    text-align: start;
+    align-items: start;
+  }
+  #header {
+    height: 190.281vw;
   }
 }
