--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -665,8 +665,14 @@ p {
 
   width: 20.117vw;
 }
+.menurwap > nav {
+  display: none;
+}
 @media (max-width: 788px) {
   .home-rect {
+    display: none;
+  }
+  .menurwap > nav {
     display: none;
   }
   .menurwap {
@@ -678,12 +684,36 @@ p {
     background-color: #12222f;
     z-index: 3;
     transition: 0.5s ease-in;
+    transform: translateX(100%);
   }
   .menurwap.menuopen {
-    width: 100%;
+    width: 89%;
+    transform: translateX(0);
   }
   .menurwap.menuopen .mainwrap {
     margin: 7vw 5vw;
+  }
+  .menurwap.menuopen > nav {
+    display: block;
+  }
+  .menurwap.menuopen > nav > ul {
+    margin-top: 18vw;
+    text-decoration: none;
+    list-style: none;
+    color: white;
+    font-size: 6vw;
+    gap: 5vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .menurwap.menuopen > nav > ul > li > a {
+    color: white;
+    font-weight: bold;
+  }
+  .menurwap.menuopen > nav > ul > li > a:hover {
+    border-bottom: 1px solid white;
+    transition: all 0.5s ease-in;
   }
   .second-col-wrap {
     justify-content: center;
